# reconstruction-of-zzt

./: .gitignore  CMakeLists.txt  README.MD  afl_fuzz_compile.sh  afl_fuzz_test.sh  compile.sh  debug.sh  library.sh  readme.md  release.sh  test.sh
SRC/: GAME.PAS  KEYS.PAS  SOUNDS.PAS  VIDEO.PAS
csrc/: CMakeLists.txt  array.h  astyle.sh  board.cc  board.h  cgamevars.h  compile.sh  curses.cc  curses.h  curses_io.cc  curses_io.h  dos.cxx  dos.h  editor.cxx  editor.h  elements.cxx  elements.h  equality_test.cc  fileops.cxx  fileops.h  fuzzt.cxx  game.cxx  game.h  gamevars.cxx  gamevars.h  hardware.cc  hardware.h  imemstream.h  input.cc  input.cxx  input.h  io.h  minmax.cxx  minmax.h  oop.cxx  oop.h  paslib.h  paszzt_test.h  ptoc.cxx  ptoc.h  (+26 more)
csrc/elements/: indices.h  info.cc  info.h
csrc/io/: colors.h  curses.cc  curses.h  io.h  special_keys.h  stub.cc  stub.h
info/elements/: ALIENOBJ.ZZT  DARK.ZZT  readable_dosbox_1_blank.info  readable_dosbox_2_fred.info  readable_dosbox_3_no_zzt_dat.info  readable_dosbox_4_zzt_dat.info  readme.md
lib/fpc-zzt/: readme.md
problems/slow/: BINDEM.ZZT  TSLOW.ZZT  cases.txt
src/: editor.pas  elements.pas  fileops.pas  fuzz.pas  game.pas  gamevars.pas  input.pas  minmax.pas  oop.pas  sounds.pas  statslist.pas  txtwind.pas  unicode.pas  video.pas  zzt.pas  zztfuzz.pas
src/equality/: editor.pas  elements.pas  game.pas  gamevars.pas  input.pas  minmax.pas  oop.pas  paszzt_test.pas  readme.md  sounds.pas  txtwind.pas  video.pas  zzt.pas  zztfuzz.pas
testcase/: BRDSKIP.ZZT  CONVEYOR.BRD  EDLEAK1.ZZT  EDLEAK2.ZZT  EDREAD1.ZZT  ENDGAME.ZZT  GHOSTCHK.ZZT  HSLIME.ZZT  INVADIR.ZZT  LEAK.ZZT  LOAD.ZZT  LONGLINE.ZZT  LTITLE.ZZT  MEMCPY.ZZT  MISALLOC.ZZT  MONIBOMB.ZZT  NOSTATS.ZZT  ODDTEXT.ZZT  OVERFLOW.ZZT  SLOW.ZZT  WRAPPED.ZZT  testcases.txt
testcase/DOS crash/: testcases.txt
testcase/benign/: EMPTY.ZZT  FLAGPAD.ZZT  FUTURE.ZZT  NAMEPAD.ZZT  PADDING.ZZT  TRUNCATE.ZZT  readme.md  testcases.txt
testcase/crash/: CNOSTAT.ZZT  COLORS.ZZT  CR1.ZZT  CR10.ZZT  CR12.ZZT  CR13.ZZT  CR15.ZZT  CR16.ZZT  CR17.ZZT  CR18.ZZT  CR20.ZZT  CR5.ZZT  CR6.ZZT  CR7.ZZT  CYCLE0.ZZT  DATAPOS.ZZT  DEADSMIL.ZZT  GIVEOF.ZZT  INVAR6.ZZT  LONG.ZZT  MULTI.ZZT  OLFUZZ.ZZT  OUTDRAW.ZZT  PLAY1.ZZT  PLAY2.ZZT  RLEFLOW.ZZT  RLENOPL.ZZT  SLIME.ZZT  STATFLIP.ZZT  TRANSTEP.ZZT  UNKUND.ZZT  crash_cases.txt
testcase/delayed crash/: BORDER.ZZT  DC1.ZZT  EDGECAS2.ZZT  EDGECASE.ZZT  EDGELOOP.ZZT  INFLATE.ZZT  LOCKED.ZZT  LOCKED2.ZZT  MBOARD.ZZT  OOPFLOW.ZZT  SCROLL.ZZT  SELFBND.ZZT  SNPLAYER.ZZT  crash_cases.txt
testcase/editor crash/: EDCRASH2.ZZT  EDITOGGL.ZZT  crash_cases.txt
testcase/editor read/: PASSREAD.ZZT  R1.ZZT  testcases.txt
testcase/equality_crash/: LONGBRD.ZZT  testcases.txt
testcase/hang/: CYCLE0.ZZT  DUPDOOM.ZZT  EVERZAP.ZZT  HANG1.ZZT  HASHSTOP.ZZT  PLAYER0.ZZT  SCROLL.ZZT  ZAPVOID.ZZT  hang_cases.txt
testcase/regressions/: COLORCHG.ZZT  testcases.txt
testcase/town_boards/: EIGHT.ZZT  EIGHTEEN.ZZT  ELEVEN.ZZT  FIFTEEN.ZZT  NINE.ZZT  NINETEEN.ZZT  ONE.ZZT
